# HomeSensorGUI

./: .gitignore  .gitmodules  CMakeLists.txt  toolchain-aarch64-rpi5.cmake
assets/: CMakeLists.txt
assets/fonts/src/: AlanSans_20_Medium.c  AlanSans_32_Medium.c
assets/icons/src/: bell.c  cloud.c  lighting.c  pressure.c
backend/: CMakeLists.txt
backend/inc/: CBackend.h  CEnvData.h  CEnvReader.h  CHttps.h  CJsonParser.h  SDataContainer.h
backend/src/: CBackend.cpp  CEnvReader.cpp  CJsonParser.cpp  main.cpp
frontend/: CMakeLists.txt  README.md
frontend/assets/fonts/src/: AlanSans_26_Medium.c
frontend/assets/icons/src/: back.c  bluetooth.c  home.c  humidity.c  information.c  layers.c  settings.c  thermometer.c  wifi.c
frontend/config_pc/: lv_conf.h
frontend/config_rpi5/: lv_conf.h
frontend/inc/: CDisplayInitializer.h  CFrontend.h  CGuiApp.h  CPirBacklightController.h  CSegfaultHandler.h
frontend/inc/basicWidgets/button/: CButton.h
frontend/inc/basicWidgets/cell/: CCell.h
frontend/inc/basicWidgets/infoBox/: CInfoBox.h
frontend/inc/basicWidgets/object/: CObject.h
frontend/inc/common/: CCustomEvent.h  CCustomEventBase.h  SObjectContairner.h
frontend/inc/mainViewManager/: CMainViewManager.h
frontend/inc/sidePanel/: CSidePanel.h
frontend/inc/styleFactory/: CStyleFactory.h
frontend/inc/views/infoView/: CInfoView.h
frontend/inc/views/layoutView/: CLayoutView.h
frontend/inc/views/sensorsView/: CSensorsView.h
frontend/inc/views/sensorsView/sensor/: CSensor.h
frontend/inc/views/settingsView/: CSettingsView.h
frontend/scripts/: build.sh  deploy.sh
frontend/src/: CDisplayInitializer.cpp  CFrontend.cpp  CGuiApp.cpp  CPirBacklightController.cpp  CSegfaultHandler.cpp  main.cpp
frontend/src/basicWidgets/button/: CButton.cpp
frontend/src/basicWidgets/cell/: CCell.cpp
frontend/src/basicWidgets/infoBox/: CInfoBox.cpp
frontend/src/basicWidgets/object/: CObject.cpp
frontend/src/common/: CLVGLCallbackInterface.cpp
frontend/src/mainViewManager/: CMainViewManager.cpp
frontend/src/sidePanel/: CSidePanel.cpp
frontend/src/statusBar/: CStatusBar.cpp
frontend/src/styleFactory/: CStyleFactory.cpp
frontend/src/views/infoView/: CInfoView.cpp
frontend/src/views/layoutView/: CLayoutView.cpp
frontend/src/views/sensorsView/: CSensorsView.cpp
frontend/src/views/sensorsView/sensor/: CSensor.cpp
frontend/src/views/settingsView/: CSettingsView.cpp
inc/basicWidgets/button/: CButton.h
inc/basicWidgets/infoBox/: CInfoBox.h
inc/basicWidgets/object/: CObject.h
inc/common/: CCallbackInterface.h  CCustomCallbackInterface.h  CCustomEvent.h  CEventBase.h  CLVGLCallbackInterface.h
inc/mainViewManager/: CMainViewManager.h
inc/sidePanel/: CSidePanel.h
inc/statusBar/: CStatusBar.h
inc/views/infoView/: CInfoView.h
inc/views/layoutView/: CLayoutView.h
inc/views/sensorsView/: CSensorsView.h
inc/views/sensorsView/sensor/: CSensor.h
inc/views/settingsView/: CSettingsView.h
poll/: poll  poll.c
scripts/: build.sh  deploy.sh
shared/ipcSocket/: CMakeLists.txt  CReceiver.cpp  CReceiver.h  CSender.cpp  CSender.h  CSocketClient.cpp  CSocketClient.h  CSocketServer.cpp  CSocketServer.h  CStream.cpp  CStream.h
shared/ipcSocket/Events/: CEventBase.cpp  CEventBase.h  CEventDispatcher.cpp  CEventDispatcher.h  CEventFactory.h  CEvents.cpp  CEvents.h  EEventType.h  IEventCallback.h
shared/logger/: CLogger.h  CMakeLists.txt
src/: main.cpp
src/basicWidgets/button/: CButton.cpp
src/basicWidgets/cell/: CCell.cpp
src/basicWidgets/infoBox/: CInfoBox.cpp
src/basicWidgets/object/: CObject.cpp
src/common/: CCallbackInterface.cpp
src/mainViewManager/: CMainViewManager.cpp
src/sidePanel/: CSidePanel.cpp
src/statusBar/: CStatusBar.cpp
src/views/infoView/: CInfoView.cpp
src/views/layoutView/: CLayoutView.cpp
src/views/sensorsView/: CSensorsView.cpp
src/views/sensorsView/sensor/: CSensor.cpp
src/views/settingsView/: CSettingsView.cpp
